fix CG_LLVMLINK for windows

--- a/src/Makefile
+++ b/src/Makefile
@@ -127,7 +127,7 @@ else
 ifneq ($(USE_LLVM_SHLIB),1)
 CG_LLVMLINK += $(LLVM_LDFLAGS) $(shell $(LLVM_CONFIG_HOST) --libs $(CG_LLVM_LIBS) --link-static) $($(LLVM_LDFLAGS) $(shell $(LLVM_CONFIG_HOST) --system-libs 2> /dev/null)
 else
-CG_LLVMLINK += $(LLVM_LDFLAGS) -lLLVM
+CG_LLVMLINK += $(LLVM_LDFLAGS) $(shell $(LLVM_CONFIG_HOST) --libs --link-shared))
 endif
 endif
 ifeq ($(USE_LLVM_SHLIB),1)
